Add endpoint test data handler